--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -10,6 +10,7 @@ jobs:
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          python -m pip install –upgrade pip
           pip install -r requirements.txt
           dvc repro 
           git fetch --prune
