--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -3,16 +3,21 @@ on: [push]
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml-py3:latest
+    container: docker://ubuntu:latest
     steps:
+      - uses: actions/setup-node@v1
+        with:
+            node-version: '12'
       - uses: actions/checkout@v2
       - name: cml_run
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pip install –upgrade pip
-          pip install -r requirements.txt
-          dvc repro 
-          git fetch --prune
-          python src/train.py
-    
+          # Your ML workflow goes here
+          apt update && apt install -y python3 python3-pip python3-setuptools
+          npm i -g @dvcorg/cml
+          # npm install -g vega-cli vega-lite
+          pip3 install -r requirements.txt
+          python3 src/train.py
+          
+      
