--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,6 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-appdirs=1.4.4=pypi_0
-atpublic=2.3=pypi_0
-backcall=0.2.0=pyhd3eb1b0_0
-botocore=1.20.88=pypi_0
-ca-certificates=2021.5.25=haa95532_1
-cached-property=1.5.2=pypi_0
-certifi=2021.5.30=py37haa95532_0
-cffi=1.14.5=pypi_0
-chardet=4.0.0=pypi_0
-colorama=0.4.4=pyhd3eb1b0_0
-commonmark=0.9.1=pypi_0
-configobj=5.0.6=pypi_0
-decorator=4.4.2=pypi_0
-dictdiffer=0.8.1=pypi_0
-diskcache=5.2.1=pypi_0
-distro=1.5.0=pypi_0
-dpath=2.0.1=pypi_0
-dulwich=0.20.23=pypi_0
-dvc=2.3.0=pypi_0
-fastapi=0.65.1=pyhd8ed1ab_0
-flatten-dict=0.4.0=pypi_0
-flufl-lock=3.2=pypi_0
-fsspec=2021.5.0=pypi_0
-ftfy=6.0.3=pypi_0
-funcy=1.16=pypi_0
-future=0.18.2=pypi_0
-gitdb=4.0.7=pypi_0
-gitpython=3.1.17=pypi_0
-grandalf=0.6=pypi_0
-idna=2.10=pypi_0
-intel-openmp=2021.2.0=h57928b3_616
-ipykernel=5.3.4=py37h5ca1d4c_0
-ipython=7.22.0=py37hd4e2768_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-jedi=0.17.0=py37_0
-jmespath=0.10.0=pypi_0
-joblib=1.0.1=pyhd8ed1ab_0
-jsonpath-ng=1.5.2=pypi_0
-jupyter_client=6.1.12=pyhd3eb1b0_0
-jupyter_core=4.7.1=py37haa95532_0
-libblas=3.9.0=9_mkl
-libcblas=3.9.0=9_mkl
-liblapack=3.9.0=9_mkl
-libsodium=1.0.18=h62dcd97_0
-lightgbm=3.2.1=py37hf2a7229_0
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-mailchecker=4.0.8=pypi_0
-mkl=2021.2.0=hb70f87d_389
-msys2-conda-epoch=20160418=1
-nanotime=0.5.2=pypi_0
-networkx=2.5.1=pypi_0
-numpy=1.20.3=py37hcbcd69c_1
-openssl=1.1.1k=h2bbff1b_0
-packaging=20.9=pypi_0
-pandas=1.2.4=py37hd77b12b_0
-parso=0.8.2=pyhd3eb1b0_0
-pathspec=0.8.1=pypi_0
-phonenumbers=8.12.24=pypi_0
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pip=21.1.1=py37haa95532_0
-ply=3.11=pypi_0
-prompt-toolkit=3.0.17=pyh06a4308_0
-psutil=5.8.0=pypi_0
-pyasn1=0.4.8=pypi_0
-pycparser=2.20=pypi_0
-pydantic=1.8.2=py37hcc03f2d_0
-pydot=1.4.2=pypi_0
-pygit2=1.6.0=pypi_0
-pygments=2.9.0=pyhd3eb1b0_0
-pygtrie=2.3.2=pypi_0
-pyparsing=2.4.7=pypi_0
-python=3.7.10=h6244533_0
-python-benedict=0.24.0=pypi_0
-python-dateutil=2.8.1=pyhd3eb1b0_0
-python-dotenv=0.17.1=pypi_0
-python-fsutil=0.5.0=pypi_0
-python-slugify=5.0.2=pypi_0
-python_abi=3.7=1_cp37m
-pytz=2021.1=pyhd3eb1b0_0
-pywin32=301=pypi_0
-pyyaml=5.4.1=pypi_0
-pyzmq=20.0.0=py37hd77b12b_1
-requests=2.25.1=pypi_0
-rich=10.2.2=pypi_0
-ruamel-yaml=0.17.7=pypi_0
-ruamel-yaml-clib=0.2.2=pypi_0
-s3transfer=0.4.2=pypi_0
-scikit-learn=0.24.2=py37h8ded0a9_0
-scipy=1.6.3=py37h924764e_0
-setuptools=52.0.0=py37haa95532_0
-shortuuid=1.0.1=pypi_0
-shtab=1.3.6=pypi_0
-six=1.15.0=py37haa95532_0
-smmap=4.0.0=pypi_0
-speedcopy=2.1.0=pypi_0
-sqlite=3.35.4=h2bbff1b_0
-starlette=0.14.2=pyhd8ed1ab_0
-tabulate=0.8.9=pypi_0
-tbb=2021.2.0=h2d74725_0
-text-unidecode=1.3=pypi_0
-threadpoolctl=2.1.0=pyh5ca1d4c_0
-toml=0.10.2=pypi_0
-tornado=6.1=py37h2bbff1b_0
-tqdm=4.61.0=pypi_0
-traitlets=5.0.5=pyhd3eb1b0_0
-typing-extensions=3.10.0.0=hd8ed1ab_0
-typing_extensions=3.10.0.0=pyha770c72_0
-urllib3=1.26.5=pypi_0
-vc=14.2=h21ff451_1
-voluptuous=0.12.1=pypi_0
-vs2015_runtime=14.27.29016=h5e58377_2
-wcwidth=0.2.5=py_0
-wheel=0.36.2=pyhd3eb1b0_0
-win-unicode-console=0.5=pypi_0
-wincertstore=0.2=py37_0
-xmltodict=0.12.0=pypi_0
-zc-lockfile=2.0=pypi_0
-zeromq=4.3.3=ha925a31_3
+scikit-learn
+lightgbm
+pandas
+numpy
+flask
+requests
